code goes off screen fix (#531)

--- a/assets/src/scss/3-global/_highlight.scss
+++ b/assets/src/scss/3-global/_highlight.scss
@@ -103,4 +103,5 @@ ol.hl-main pre {
 code {
   background-color: #F2F9FA;
   color: inherit;
+  word-break: break-word;
 }
